--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
       showMessage('<i class="bi bi-floppy"></i> Modification enregistrée !', "success");
       startReloadTimer();
     } else {
-      showMessage('<i class="<i class="bi bi-database-fill-x"></i> Erreur lors de la mise à jour !', "error");
+      showMessage('<i class="bi bi-database-fill-x"></i> Erreur lors de la mise à jour !', "error");
     }
   } catch (error) {
     console.error(error);
