--- a/index.html
+++ b/index.html
@@ -273,13 +273,13 @@
 
       if (result.status === "success") {
         document.getElementById("nomsignal").value = "";
-        showMessage("<i class="bi bi-floppy"></i> Signalement enregistré, merci !", "success");
+        showMessage('<i class="bi bi-floppy"></i> Signalement enregistré, merci !', "success");
       } else {
-        showMessage("<i class="bi bi-database-fill-x"></i> Erreur lors de l'envoi du signalement.", "error");
+        showMessage('<i class="bi bi-database-fill-x"></i> Erreur lors de l'envoi du signalement.', "error");
       }
     } catch (error) {
       console.error(error);
-      showMessage("<i class="bi bi-database-exclamation"></i> Erreur de connexion au serveur.", "error");
+      showMessage('<i class="bi bi-database-exclamation"></i> Erreur de connexion au serveur.', "error");
     }
   }
     // 🔹 Déclencher la recherche aussi avec la touche Entrée
