--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         document.getElementById("nomsignal").value = "";
         showMessage('<i class="bi bi-floppy"></i> Signalement enregistré, merci !', "success");
       } else {
-        showMessage('<i class="bi bi-database-fill-x"></i> Erreur lors de l'envoi du signalement.', "error");
+        showMessage("<i class="bi bi-database-fill-x"></i> Erreur lors de l'envoi du signalement.", "error");
       }
     } catch (error) {
       console.error(error);
