--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ function formatDateISOToInput(dateStr) {
   const dd = pad(date.getDate());
   const HH = pad(date.getHours());
   const mm = pad(date.getMinutes());
-  return `${dd}/${MM}/${yyy} ${HH}:${mm}`;
+  return `${dd}/${MM}/${yyy}-${HH}:${mm}`;
 }
 
         
