--- a/index.html
+++ b/index.html
@@ -136,16 +136,17 @@
         // Étudiant trouvé
 
 // Fonction utilitaire pour formater ISO → yyyy-MM-ddTHH:mm
-function formatDateISOToInput(dateStr) {
+function formatDateISOReadable(dateStr) {
   if (!dateStr) return "";
   const date = new Date(dateStr);
   const pad = n => n.toString().padStart(2, '0');
-  const yyyy = date.getFullYear();
-  const MM = pad(date.getMonth() + 1); // mois de 0 à 11
   const dd = pad(date.getDate());
+  const MM = pad(date.getMonth() + 1);
+  const yyyy = date.getFullYear();
   const HH = pad(date.getHours());
   const mm = pad(date.getMinutes());
-  return `${dd}/${MM}/${yyy}-${HH}:${mm}`;
+  
+  return `${dd}/${MM}/${yyyy} ${HH}:${mm}`;
 }
 
         
@@ -158,7 +159,7 @@ function formatDateISOToInput(dateStr) {
         document.getElementById("tel2").value = data.Tel2 || "";
         document.getElementById("email").value = data.Email || "";
         document.getElementById("modifie").value = formatDateISOToInput(data.Modifie);
-
+        
         //document.getElementById("modifie").value = data.Modifie || "";
         recuURL = data.Recu || null;
 
