--- a/index.html
+++ b/index.html
@@ -62,8 +62,14 @@
       </div><!-- fin basinfo -->
     </div><!-- fin infos -->
     <div id="services">
-      <h3>Récupérer vos reçus de versement des frais</h3>
-      <button id="btnrecu" onclick="getrecu()">Reçu d'inscription</button>
+      <div id="recus">
+        <h3>Récupérer vos reçus de versement des frais</h3>
+        <button id="btnrecu" onclick="getrecu()">Reçu 2ème année</button>
+      </div><!-- fin recus -->
+      <div id="autres">
+        <h3>Signaler des problèmes avec la plateforme</h3>
+        <button id="btnm2p" onclick="getm2p()">Réinitialiser mon m2p</button>
+      </div><!-- fin autres -->
     </div><!-- fin services -->
   </div><!-- fin container -->
   <div id="notifications"></div>
