--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
       loader.style.display = "none";
       logo.style.display = "flex";
       document.getElementById("login").style.display = "flex";
+      cinInput.focus();
       showMessage('<i class="bi bi-exclamation-triangle"></i> Veuillez entrer le numéro de votre CIN !', "error");
       return;
     }
