--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         document.getElementById("tel1").value = data.Tel1 || "";
         document.getElementById("tel2").value = data.Tel2 || "";
         document.getElementById("email").value = data.Email || "";
-
+/*
 // 🔹 Formater la date si elle existe
 if (data.Modifie) {
   const d = new Date(data.Modifie);
@@ -166,8 +166,8 @@ if (data.Modifie) {
   document.getElementById("modifie").value = "";
 }
 
-        
-        //document.getElementById("modifie").value = data.Modifie || "";
+*/        
+        document.getElementById("modifie").value = data.Modifie || "";
         recuURL = data.Recu || null;
 
         // Désactiver le bouton initialement
