--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ function surveillerModifications() {
   // 🔹 Télécharger reçu
   function getrecu() {
     if (!recuURL) {
-      showMessage("⚠️ Aucun reçu disponible pour vous.", "error");
+      showMessage('<i class="bi bi-file-earmark-x"></i> Aucun reçu disponible pour vous.', "error");
       return;
     }
 
