--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <button id="btnrecu" onclick="getrecu()">Reçu 2ème année</button>
       </div><!-- fin recus -->
       <div id="autres">
-        <h3>Signaler des problèmes avec la plateforme</h3>
+        <h3>Signaler des problèmes au niveau dela plateforme</h3>
         <button id="btnm2p" onclick="getm2p()">Réinitialiser mon m2p</button>
       </div><!-- fin autres -->
     </div><!-- fin services -->
