--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div id="cinfail">
             <input type="text" id="nomsignal" placeholder="Saisir votre nom">
             <div id="btnfail">
-              <button onclick="signaler()">Signaler</button>
+              <button id="btnsignal" onclick="signaler()">Signaler</button>
               <button id="cinfailcncl">Retour</button>
             </div><!-- fin btnfail -->
           </div><!-- fin cinfail -->
