--- a/index.html
+++ b/index.html
@@ -64,8 +64,10 @@
     <div id="services">
       <div id="recus">
         <h3>Récupérer vos reçus de versement des frais</h3>
-        <button id="btnrecu1" onclick="getrecu(1)">Reçu 1ère année</button>
-        <button id="btnrecu2" onclick="getrecu(2)">Reçu 2ème année</button>
+        <div id="btnrecus">
+          <button id="btnrecu1" onclick="getrecu(1)">Reçu 1ère année</button>
+          <button id="btnrecu2" onclick="getrecu(2)">Reçu 2ème année</button>
+        </div><!-- fin btnrecus -->
       </div><!-- fin recus -->
       <div id="autres">
         <h3>Signaler des problèmes au niveau de la plateforme</h3>
