--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         <div id="btnrecus">
           <button id="btnrecu1" onclick="getrecu(1)">Reçu 1ère année</button>
           <button id="btnrecu2" onclick="getrecu(2)">Reçu 2ème année</button>
+          <button id="btnrecu3" onclick="getrecu(2)">Reçu 3ème année</button>
         </div><!-- fin btnrecus -->
       </div><!-- fin recus -->
       <div id="autres">
