--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script>
     //Année en cours
-    const sheetURL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vSNJhHGgvdyQjfDKHTWpGBWK-jCRNV31zSxJjTYl2tz5WuLp4kUNL8F_Op4KuMXH-0_miPt4Ln9ZlDc/pub?gid=1147238427&single=true&output=csv"; // 🔁 Mets ton ID ici
+    const sheetURL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vSNJhHGgvdyQjfDKHTWpGBWK-jCRNV31zSxJjTYl2tz5WuLp4kUNL8F_Op4KuMXH-0_miPt4Ln9ZlDc/pub?gid=1147238427&single=true&output=csv";
 
 fetch(sheetURL)
   .then(res => res.text())
@@ -89,12 +89,11 @@ fetch(sheetURL)
     const rows = csv.split("\n").map(r => r.split(","));
     const today = new Date();
     let currentAnnee = "Non définie";
+    let niveauActuel = null;
 
-    // Ignorer l'entête si présente
     for (let i = 1; i < rows.length; i++) {
-      const [annee, debutStr, finStr] = rows[i].map(v => v.trim());
+      const [niveau, annee, debutStr, finStr] = rows[i].map(v => v.trim());
 
-      // Conversion JJ/MM/AAAA → Date
       const [dDeb, mDeb, yDeb] = debutStr.split("/");
       const [dFin, mFin, yFin] = finStr.split("/");
       const debut = new Date(`${yDeb}-${mDeb}-${dDeb}`);
@@ -102,17 +101,28 @@ fetch(sheetURL)
 
       if (today >= debut && today <= fin) {
         currentAnnee = annee;
+        niveauActuel = niveau;
         break;
       }
     }
 
     document.getElementById("annuniv").textContent = currentAnnee;
+
+    // 🔥 Affichage des boutons selon le niveau
+    if (niveauActuel === "1") {
+      document.getElementById("btnrecu1").style.display = "inline-block";
+    } else if (niveauActuel === "2") {
+      document.getElementById("btnrecu2").style.display = "inline-block";
+    } else if (niveauActuel === "3") {
+      document.getElementById("btnrecu3").style.display = "inline-block";
+    }
   })
   .catch(err => {
     console.error("Erreur import GSheet :", err);
     document.getElementById("annuniv").textContent = "Erreur de chargement";
   });
-    
+
+    //début script
     const apiURL = "https://script.google.com/macros/s/AKfycbx8aH6rH6rBM68_JjSn-YxVjNcPOXHj_VuDg8QiXeskyaNhu91n_YmmIu2asKVc9fCi/exec";
   let currentRow = null;
   //let recuURL = null;
