--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
           <img id="loader" src="load.gif" alt="Chargement...">
           <img id="fail" src="cinfail.png" alt="CIN introuvable ou erroné !">
           <div id="logform">
-            <input type="tel" id="cinInput" inputmode="numeric" pattern="[0-9]*" placeholder="Entrer CIN">
+            <!-- <input type="tel" id="cinInput" inputmode="numeric" pattern="[0-9]*" placeholder="Entrer CIN"> -->
+            <input type="tel" id="cinInput" inputmode="numeric" pattern="[0-9]*" name="m2p" autocomplete="on" placeholder="Entrer CIN">
             <button onclick="chercherEtudiant()">Chercher</button>
           </div><!-- fin logform -->
           <div id="cinfail">
