--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <img id="fail" src="cinfail.png" alt="CIN introuvable ou erroné !">
           <div id="logform">
             <!-- <input type="tel" id="cinInput" inputmode="numeric" pattern="[0-9]*" placeholder="Entrer CIN"> -->
-            <input type="number" id="cinInput" inputmode="numeric" pattern="[0-9]*" name="m2p" autocomplete="current-password" placeholder="Entrer CIN">
+            <input type="tel" id="cinInput" inputmode="tel" placeholder="Entrer CIN">
             <button onclick="chercherEtudiant()">Chercher</button>
           </div><!-- fin logform -->
           <div id="cinfail">
