--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="titre">
       <h2>LTI Pr2</h2>
-      <h3 id="annuniv"></h3>
+      <h3 id="annuniv">Chargement...</h3>
     </div>
     <div class="userbox">
       <button class="logoutBtn" id="logoutBtnpc" onclick="location.reload()">Déconnexion</button>
